--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
 # Startup Config
-API_ID = ""
-API_HASH = ""
-BOT_TOKEN = ""
-AUTH_CHANNEL = ""
-DATABASE_URL = ""
+API_ID = "23241238"
+API_HASH = "e6ff6e3068dbea75500865ac49c3608f"
+BOT_TOKEN = "7050547060:AAEVSJj8alyrDTfSx383uAHn93uVqllJ4kE"
+AUTH_CHANNEL = "-1002128092987"
+DATABASE_URL = "mongodb+srv://seyov22189:seyov22189@cluster0.rttekkf.mongodb.net/?retryWrites=true&w=majority"
 SESSION_STRING = ""
 
 # Additional CDN Bots
@@ -11,16 +11,16 @@ SESSION_STRING = ""
 # MULTI_TOKEN2 = "" (upto 50)
 
 # Web Config
-BASE_URL = ""
+BASE_URL = "https://tellycloud-882f471962d3.herokuapp.com"
 PORT = "8080"
 
 # Login Details
-USERNAME = "admin" 
-PASSWORD = "admin"
+USERNAME = "" 
+PASSWORD = ""
 
 # Playlist Login Details
-ADMIN_USERNAME = "surfTG"
-ADMIN_PASSWORD = "surfTG"
+ADMIN_USERNAME = "tellycloud0"
+ADMIN_PASSWORD = "tellycloud0"
 
 SLEEP_THRESHOLD = "60"  #Reduce FloodWait
 WORKERS = "100"         #Parallel Tasks
